welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: not found: value couelurs
    peindreSol(couelurs)
               ^Array1:38: error: not enough arguments for method peindreMotif: (couleurs: Array[java.awt.Color])Unit.
Unspecified value parameter couleurs.
    peindreMotif()
                ^Array1:40: error: not found: value roite
    roite()
    ^